--- a/HW4/myprofile.html
+++ b/HW4/myprofile.html
@@ -20,7 +20,7 @@
     
     <p class="ra2"><b style="line-height: 1.5;">ชื่อ</b><br>นาย คุณากร คชรินทร์</p>
     <p class="ra2"><b style="line-height: 1.5;">รหัสนักศึกษา</b><br>6806022610143</p>
-    <p class="ra2"><b style="line-height: 1.5;">คณะ</b><br>สาขาวิชาวิศวกรรมสารสนเทศและเครือข่าย ชั้นปีที่ 1</p>
+    <p class="ra2"><b style="line-height: 1.5;">สาขาวิชา</b><br>วิศวกรรมสารสนเทศและเครือข่าย ชั้นปีที่ 1</p>
     <p class="ra2"><b style="line-height: 1.5;">ช่องทางติดต่อ</b><br>Kunagon490@gmail.com</p>
     <hr>
     <div class="row">
