--- a/HW4/index.html
+++ b/HW4/index.html
@@ -17,9 +17,14 @@
     <h1 class="small rainbow" style="font-size: 50;">ข้อมูลหลักสูตร</h1>
     <hr>
     <p class="ra2"><b style="line-height: 1.5;">หลักสูตร</b><br>วิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมสารสนเทศและเครือข่าย</p>
+    <p class="ra2"><b style="line-height: 1.5;">รหัสหลักสูตร</b><br>25620151100293</p>
     <p class="ra2"><b style="line-height: 1.5;">ระดับการศึกษา</b><br>ปริญญาตรี</p>
     <p class="ra2"><b style="line-height: 1.5;">คณะ</b><br>เทคโนโลยีและการจัดการอุตสาหกรรม</p>
     <p class="ra2"><b style="line-height: 1.5;">มหาวิทยาลัย</b><br>เทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</p>
+    <p class="ra2">หลักสูตรของภาควิชามุ่งเน้นให้มีเรียนมีการฝึกปฏิบัติจริง ทำให้ผู้เรียน 
+        มีความรู้ความเข้าใจและทักษะที่เกี่ยวกับเทคโนโลยีสารสนเทศ หลักการการเขียนโปรแกรมทั้งแบบโครงสร้างและเชิงวัตถุ หลักการออกแบบและพัฒนาระบบสารสนเทศ 
+        การสื่อสารข้อมูลและเครือข่ายการออกแบบ และพัฒนาแอปพลิเคชันบนอุปกรณ์เคลื่อนที่ การออกแบบและพัฒนาสื่อมัลติมีเดียอินเทอร์เน็ตของสรรพสิ่ง การฝึกปฏิบัติในทุกรายวิชาทำให้ 
+        นักศึกษาสามารถเรียนรู้ ค้นคว้าได้ด้วยตนเอง และส่งเสริมให้ผู้เรียนสามารถนำความรู้และทักษะไปประยุกต์ใช้งานจริงในการฝึกงานหรือฝึกสหกิจศึกษาในสถานประกอบการได้</p>
     <hr>
 
     <h3 class="center"><a href="subject.html">ตารางเรียน</a></h3>
